--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ header {
     width: 100%;
     min-height: 100vh;
     position: relative;
-    background: url(Images/Sales\ Product\ Website.png);
+    background: url(Sales\ Product\ Website.png);
     background-repeat: no-repeat;
     background-position: center right;
     background-size: cover;
